--- a/face-rec/package.json
+++ b/face-rec/package.json
@@ -6,20 +6,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.19",
+    "aws-sdk": "^2.1663.0",
     "browser-fs-access": "^0.35.0",
     "express": "^4.19.2",
     "face-api.js": "^0.22.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
     "react-webcam": "^7.2.0",
-    "web-vitals": "^2.1.4",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.6",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
